# VDI-solid

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  build-with-signing.ps1  build-with-signing.sh  index.html  package-lock.json  package.json  tsconfig.json  version_release.sh  vite-plugin-build-timer.ts  vite.config.ts  youken.md  実装予定.md
.claude/: settings.local.json
.claude/agents/: serena-code-specialist.md
.claude/commands/: TauriOptmai.md
.gemini/: settings.json
.github/instructions/: copilot-instructions.md
.github/prompts/: GithubAction自動実行.prompt.md  aマークダウンで考えさせる.prompt.md  a段階的支持.prompt.md  commitコミットメッセージ.prompt.md  planとタスク分割.prompt.md  serenaMCP.prompt.md  suggest提案と試行.prompt.md
.github/workflows/: auto-release.yml  build.yml  build.yml.いったん無効  release-egui.yml  release.yml  release.yml.backup
.serena/: project.yml
.serena/memories/: ImageOverlayGrid.md  TODO.md  app_build_and_export_proposal.md  codebase_structure.md  coding_style.md  layer_management_plan.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/: 20251027_tauri_updater_setup.md  CI_CD_SETUP_GUIDE.md  backend-optimization.md  control-panel-enhancement-design.md  control-panel-enhancement-tasks.md  control-panel-redesign.md  design.md  design_egui.md  frontend-optimization.md  optimization-summary.md  release-flow.md  task.md  vdi-solid-closewindow-spec.md  virtualdesktop&questコントロール対応.md
docs/20250107_layer_management_system/: plan.md  ticket_001.md  ticket_002.md  ticket_003.md  ticket_004.md  ticket_005.md  ticket_006.md  ticket_007.md  ticket_008.md  ticket_009.md
docs/20250107_peaking_blink_and_downsample/: plan.md  ticket_001.md  ticket_002.md  ticket_003.md  ticket_004.md  ticket_005.md
docs/20250107_peaking_optimization/: phase4_test_results.md  plan.md  ticket_001.md  ticket_002.md  ticket_003.md  ticket_004.md
docs/20250107_peaking_performance/: cancellation_fix.md  performance_analysis.md  plan.md  ticket_001.md  ticket_002.md  ticket_003.md  ticket_004.md  ticket_005.md  ticket_006.md  ticket_007.md
docs/20251008_drag_performance/: implementation_report.md  plan.md  ticket_001.md  ticket_002.md  ticket_003.md
docs/20251020_ui_integration/: design.md  task.md
docs/20251022_manual_build_release/: design.md  task.md
docs/20251022_release_branch_trigger/: design.md  task.md
docs/20251022_release_workflow_fix/: design.md  task.md
docs/20251024_svg_theme_support/: design.md  task.md
docs/20251025_tauri_updater/: github-actions-issue.md  updater-mechanism.md  windows-only-release.md
docs/20251025_titlebar_layout_refactor/: design.md  task.md
docs/20251027_github_actions_automation/: task.md
docs/20251027_updater/: README.md  design.md  signing.md  task.md
docs/20251028_startup_optimization/: design.md  task.md
docs/20251029_build_optimization/: baseline.md  build-metrics.json  bundle-stats.html  design.md  result.md  task.md
docs/20251105_auto_update_improvement/: design.md
docs/20251105_jpegxl_support/: design.md  task.md
docs/20251106_startup_profiling/: README.md  design.md  task.md
docs/20251117_linux_support/: design.md  task.md
docs/20251118_tauri_performance_optimization/: design.md  results.md  task.md
docs/HoverNavigationOverlay/: ticket_001.md
docs/ImageRotationPreview/: ticket_001.md
docs/ImageViewer_Boundary_Restriction/: boundary_adjustment_guide.md  ticket_001.md  ticket_002.md  ticket_003.md  ticket_004.md  ticket_005.md  ticket_006.md  ticket_007.md  ticket_008.md
docs/ImageViewer_GridOverlay/: ticket_001.md  ticket_002.md
docs/review/: code_review.md
installer/: build.ps1  setup.iss
licenses/: EULA_EN.txt  EULA_JA.txt
scripts/: update-version.js
src/: App.css  App.tsx  cli_args.rs  file_operations.rs  histogram.rs  img.rs  index.tsx  lib.rs  main.rs  metadata.rs  navigation.rs  peaking.rs  update.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli_args.rs  controller.rs  dnd.rs  file_operations.rs  histogram.rs  img.rs  lib.rs  main.rs  main_egui.rs  navigation.rs  peaking.rs  process_manager.rs  profiling.rs  settings.rs  virtualdesktop.rs
test/: histogram_rust.md  peaking_rust.md  screenfit.test.md  screenfit.test.ts
(+54 files in other folders)
