[package]
name = "vdi"
version = "0.2.21"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vdi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "fs"] }
rayon = "1.8"
lazy_static = "1.4"

# Desktop専用の依存関係

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"

# リリースビルド最適化設定
[profile.release]
lto = true              # Link Time Optimization: リンク時最適化を有効化
codegen-units = 1       # コード生成ユニットを1に設定し最適化を向上
opt-level = "z"         # サイズ最適化(zはsより積極的)
strip = true            # デバッグシンボルを削除してバイナリサイズ削減
panic = "abort"         # パニック時に即座に終了(unwinding処理を削除)

