[package]
name = "vdi"
version = "0.4.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vdi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "fs", "process"] }
rayon = "1.8"
lazy_static = "1.4"
sysinfo = "0.30"

# Desktop専用の依存関係

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"

# Egui dependencies
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts", 
    "glow", 
    "wayland", 
    "x11", 
    "persistence"
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
egui_plot = "0.29"
rfd = "0.12"
chrono = "0.4"
dirs-next = "2.0"
once_cell = "1.18"

[features]
# default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "vdi-egui"
path = "src/main_egui.rs"
bench = false

